# sigil-sdk

./: .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  README.md  go.work  go.work.sum  llms.txt  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  copilot-instructions.md
docs/: development.md  plugin-feature-parity-report-2026-05-25.md
dotnet/: Agento11y.DotNet.slnx  (+6 more)
examples/experiments/python/: README.md  mise.toml  pyproject.toml
examples/experiments/python-langgraph/: pyproject.toml
examples/experiments/python/app/: agent.py  dashboard_agent.py  dashboard_render.py  run_dashboard_experiment.py  run_experiment.py
examples/python-langchain/: .env.example  .gitignore  README.md  mise.toml  pyproject.toml
examples/python-langchain/app/: agent.py  agento11y_client.py  classifier.py  handlers.py  main.py  sigil_client.py  telemetry.py  weather.py
python/: README.md  pyproject.toml
python-frameworks/agent-framework-foundry/: README.md  pyproject.toml
python-frameworks/agent-framework-foundry/sigil_sdk_agent_framework_foundry/: __init__.py  handler.py
python-frameworks/agent-framework-foundry/tests/: test_agent_framework_foundry.py
python-frameworks/claude-agent-sdk/: README.md  pyproject.toml
python-frameworks/claude-agent-sdk/agento11y_claude_agent/: __init__.py  handler.py
python-frameworks/claude-agent-sdk/sigil_sdk_claude_agent/: handler.py
python-frameworks/claude-agent-sdk/tests/: test_agento11y_claude_agent.py  test_sigil_sdk_claude_agent.py
python-frameworks/google-adk/: README.md  pyproject.toml
python-frameworks/google-adk/agento11y_google_adk/: __init__.py  handler.py
python-frameworks/google-adk/sigil_sdk_google_adk/: __init__.py
python-frameworks/google-adk/tests/: test_agento11y_google_adk.py  test_sigil_sdk_google_adk.py
python-frameworks/litellm/: README.md  pyproject.toml
python-frameworks/litellm/agento11y_litellm/: __init__.py  handler.py
python-frameworks/litellm/example/: Dockerfile  README.md  agento11y_callback.py  config.yaml  docker-compose.yaml  sigil_callback.py
python-frameworks/litellm/sigil_sdk_litellm/: __init__.py  handler.py
python-frameworks/litellm/tests/: test_litellm_handler.py
python-frameworks/llamaindex/: README.md  pyproject.toml
python-frameworks/llamaindex/agento11y_llamaindex/: __init__.py  handler.py
python-frameworks/llamaindex/sigil_sdk_llamaindex/: __init__.py
python-frameworks/llamaindex/tests/: test_agento11y_llamaindex.py  test_sigil_sdk_llamaindex.py
python-frameworks/openai-agents/: README.md  pyproject.toml
python-frameworks/openai-agents/agento11y_openai_agents/: __init__.py  handler.py
python-frameworks/openai-agents/sigil_sdk_openai_agents/: __init__.py
python-frameworks/openai-agents/tests/: test_agento11y_openai_agents.py  test_sigil_sdk_openai_agents.py
python-frameworks/pydantic-ai/: README.md  pyproject.toml
python-frameworks/pydantic-ai/agento11y_pydantic_ai/: __init__.py  capability.py  handler.py
python-frameworks/pydantic-ai/sigil_sdk_pydantic_ai/: __init__.py  capability.py  handler.py
python-frameworks/pydantic-ai/tests/: test_agento11y_pydantic_ai.py  test_sigil_sdk_pydantic_ai.py
python-frameworks/strands/: README.md  pyproject.toml
python-frameworks/strands/agento11y_strands/: __init__.py  handler.py
python-frameworks/strands/sigil_sdk_strands/: __init__.py  handler.py
python-frameworks/strands/tests/: test_agento11y_strands.py  test_sigil_sdk_strands.py
python-providers/anthropic/: LICENSE  README.md  pyproject.toml
python-providers/anthropic/agento11y_anthropic/: __init__.py  provider.py
python-providers/anthropic/sigil_sdk_anthropic/: __init__.py  provider.py
python-providers/anthropic/tests/: test_anthropic_provider.py
python-providers/foundry/: README.md  pyproject.toml
python-providers/foundry/sigil_sdk_foundry/: __init__.py  provider.py
python-providers/foundry/tests/: test_foundry_provider.py
python-providers/gemini/: README.md  pyproject.toml
python-providers/gemini/agento11y_gemini/: __init__.py  provider.py
python-providers/gemini/sigil_sdk_gemini/: __init__.py  provider.py
python-providers/gemini/tests/: test_gemini_provider.py
python-providers/openai/: README.md  pyproject.toml
python-providers/openai/agento11y_openai/: __init__.py  provider.py
python-providers/openai/sigil_sdk_openai/: __init__.py  provider.py
python-providers/openai/tests/: test_openai_provider.py
python/agento11y/: __init__.py  _experiments_transport.py  cache_diagnostics.py  client.py  config.py  context.py  conversations.py  errors.py  framework_handler.py  hooks.py  models.py  proto_mapping.py  redaction.py  usage.py  validation.py  version.py
python/agento11y/experiments/: __init__.py  client.py  experiment.py  otel.py  score.py  types.py
python/agento11y/exporters/: __init__.py  grpc.py  http.py  noop.py
python/scripts/: devex_emitter.py  generate_proto.sh
python/sigil_sdk/: __init__.py  _experiments_transport.py  cache_diagnostics.py  client.py  config.py  context.py  conversations.py  errors.py  experiment.py  experiments.py  framework_handler.py  hooks.py  models.py  proto_mapping.py  redaction.py  tracing.py  usage.py  validation.py  version.py
python/sigil_sdk/experiments/: __init__.py  client.py  experiment.py  otel.py  types.py
python/sigil_sdk/exporters/: base.py  grpc.py  http.py  noop.py
python/skills/agento11y-experiments/: SKILL.md
python/skills/sigil-experiments/: SKILL.md
python/tests/: conftest.py  test_auth_config.py  test_cache_diagnostics.py  test_client_tags.py  test_conformance.py  test_content_capture.py  test_dataset_collection.py  test_devex_emitter.py  test_env_config.py  test_experiment.py  test_experiments.py  test_experiments_transport.py  test_framework_handler.py  test_hooks_transport.py  test_metric_exemplar.py  test_rating_transport.py  test_redaction.py  test_runtime.py  test_tool_loop.py  test_trace_transport.py  test_transport.py  test_usage.py  test_validation.py  test_workflow_steps.py
(+1347 files in other folders)
