[project]
name = "agento11y"
version = "0.9.3"
description = "Grafana Agent Observability Python SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.80.0",
  "protobuf>=6.31.1",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "opentelemetry-proto>=1.27.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "grpcio-tools>=1.80.0",
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agento11y*"]

[tool.setuptools.package-data]
agento11y = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
