[project]
name = "agento11y-litellm"
version = "0.10.0"
description = "LiteLLM callback handler for the Grafana Agent Observability Python SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.14.1",
  "agento11y>=0.10.0",
  "litellm>=1.82.3,!=1.82.7,!=1.82.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Temporary path source until the renamed agento11y distribution is published
# to PyPI; drop this table and re-run `uv lock` after the first post-rename
# release.
[tool.uv.sources]
agento11y = { path = "../../python", editable = true }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agento11y_litellm*"]

[tool.setuptools.package-data]
agento11y_litellm = ["py.typed"]
