[project]
name = "agento11y-llamaindex"
version = "0.10.0"
description = "LlamaIndex callback handlers for the Grafana Agent Observability Python SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "agento11y>=0.10.0",
  "llama-index>=0.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agento11y_llamaindex*"]

[tool.setuptools.package-data]
agento11y_llamaindex = ["py.typed"]
