[project]
name = "sigil-sdk-pydantic-ai"
version = "0.3.0"
description = "Pydantic AI capability for Sigil Python SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "sigil-sdk>=0.3.0",
  "pydantic-ai>=1.86.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sigil_sdk_pydantic_ai*"]

[tool.setuptools.package-data]
sigil_sdk_pydantic_ai = ["py.typed"]
