[project]
name = "agento11y-pydantic-ai"
version = "0.9.3"
description = "Pydantic AI capability for the Grafana Agent Observability Python SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "agento11y>=0.9.3",
  "pydantic-ai>=1.86.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agento11y_pydantic_ai*"]

[tool.setuptools.package-data]
agento11y_pydantic_ai = ["py.typed"]
