[project]
name = "agento11y-strands"
version = "0.9.3"
description = "Strands Agents hooks for the Grafana Agent Observability Python SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "agento11y>=0.9.3",
  "strands-agents>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agento11y_strands*"]

[tool.setuptools.package-data]
agento11y_strands = ["py.typed"]
