[project]
name = "sigil-sdk-anthropic"
version = "0.1.2"
description = "Anthropic helper wrappers for Sigil Python SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "sigil-sdk>=0.1.2",
  "anthropic>=0.79.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sigil_sdk_anthropic*"]

[tool.setuptools.package-data]
sigil_sdk_anthropic = ["py.typed"]
