[project]
name = "sigil-sdk-gemini"
version = "0.2.1"
description = "Gemini helper wrappers for Sigil Python SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "sigil-sdk>=0.2.1",
  "google-genai>=1.63.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sigil_sdk_gemini*"]

[tool.setuptools.package-data]
sigil_sdk_gemini = ["py.typed"]
