[project]
name = "sigil-sdk-openai"
version = "0.1.2"
description = "OpenAI helper wrappers for Sigil Python SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "sigil-sdk>=0.1.2",
  "openai>=2.20.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sigil_sdk_openai*"]

[tool.setuptools.package-data]
sigil_sdk_openai = ["py.typed"]
