[project]
name = "sigil-langgraph-experiment-example"
version = "0.1.0"
description = "Run a LangGraph agent over a dataset as a Sigil experiment, grade locally, and publish scores."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",

    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # Optional: only used when OPENAI_API_KEY is set. Otherwise a built-in fake
    # chat model is used so the example runs offline.
    "langchain-openai>=0.2.0",

    "sigil-sdk>=0.7.0",
    "sigil-sdk-langgraph>=0.7.0",
]

[tool.uv.sources]
# Point at the local packages in this monorepo so the example runs against the
# code in this checkout. Remove these two entries to consume the published
# PyPI releases instead.
sigil-sdk = { path = "../../../python", editable = true }
sigil-sdk-langgraph = { path = "../../../python-frameworks/langgraph", editable = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["../../../python", "../../../python-frameworks/langgraph"]
